Implemented persistance for widgets and added new api route
